[gd_scene load_steps=2 format=3 uid="uid://co2s41q0cwdcp"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_ivbce"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_ivbce")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 168.0
offset_top = 87.0
offset_right = 1003.0
offset_bottom = 481.0
scale = Vector2(0.991365, 1.14778)
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Resume"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Reset"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
